--- a/hellolibrary/CMakeLists.txt
+++ b/hellolibrary/CMakeLists.txt
@@ -3,17 +3,10 @@ project(hellolib)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-set(CMAKE_INSTALL_INCLUDEDIR ${CMAKE_CURRENT_BINARY_DIR}/analysislib/include)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
-set(CMAKE_INSTALL_LIBDIR ${CMAKE_CURRENT_BINARY_DIR}/lib)
-
-set(HELLOLIB_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/src/helloclass.cpp)
-
-add_library(hellolib SHARED ${HELLOLIB_SOURCE})
-target_include_directories(hellolib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include
-                                    SYSTEM INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+add_library(hellolib SHARED ${CMAKE_CURRENT_SOURCE_DIR}/src/helloclass.cpp)
 
 list(APPEND CMAKE_PREFIX_PATH ${CMAKE_CURRENT_BINARY_DIR})
 
-install(TARGETS hellolib DESTINATION lib)
-install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/helloclass.h DESTINATION include)
+add_executable(helloworld main.cpp)
+include_directories(${PROJECT_SOURCE_DIR}/include)
+target_link_libraries(helloworld PRIVATE hellolib)
